Added getGameSession endpoint. Added spec to openapi doc. Added FireDataStore. Added AuthNZ wrappers.
